Modify admin_user property name to match other jobs

--- a/jobs/deploy-cloudformation-broker/templates/bin/deploy.erb
+++ b/jobs/deploy-cloudformation-broker/templates/bin/deploy.erb
@@ -7,7 +7,7 @@ export PATH=/var/vcap/packages/cf-cli/bin:$PATH
 CF_COLOR=false
 
 CF_API_ENDPOINT="<%= p('cloudformation-broker.cf.api_endpoint') %>"
-CF_ADMIN_USER="<%= p('cloudformation-broker.cf.admin_user') %>"
+CF_ADMIN_USER="<%= p('cloudformation-broker.cf.admin_username') %>"
 CF_ADMIN_PASSWORD="<%= p('cloudformation-broker.cf.admin_password') %>"
 
 BROKER_APP_SRC=/var/vcap/packages/cloudformation-broker/src/github.com/cf-platform-eng/cloudformation-broker
